--- a/index-START.html
+++ b/index-START.html
@@ -35,9 +35,24 @@
     const allAdult = people.every(person => ((new Date()).getFullYear()) - person.year >= 19);
     console.log({allAdult});
 
-    // Array.prototype.findIndex()
-    // Find the comment with this ID
-    // delete the comment with the ID of 823423
+    //const comment = comments.find(function(comment) {
+    //  if(comment.id === 823423) {
+    //    return true;
+    //  }
+    //});
+
+    const comment = comments.find(comment => comment.id === 823423)
+    console.log(comment);
+
+    const index = comments.findIndex(comment => comment.id === 823423);
+    console.log(index);
+
+    //comments.splice(index, 1);
+
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comment.slice(index + 1)
+    ];
 
   </script>
 </body>
